--- a/style.css
+++ b/style.css
@@ -147,3 +147,9 @@ body{
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0px 15px 20px #231059;
 }
+
+@media(width < 400px){
+    .game-play .btn-tic-tac-toe{
+        font-size: 40px;
+    }
+}
